# ssrq-schema

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CNAME  README.md  Taskfile  index.html  main.py  mkdocs.yml  pyproject.toml  test-attDef.xml  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/actions/mike/: action.yml
.github/workflows/: pr_merge.yml  pr_merge_development.yml  pr_to_dev.yml  pr_to_main.yml
1.0.0/: 404.html  TEI_Schema.rng  sitemap.xml
1.0.0/elements/: index.html
1.0.0/search/: search_index.json
1.1.0/: 404.html  TEI_Schema.odd  TEI_Schema.rng  index.html  sitemap.xml
1.1.0/elements/: index.html
1.2.0/: 404.html  TEI_Schema.rng  index.html  sitemap.xml
1.2.0/elements/: index.html
1.2.0/search/: search_index.json
1.3.0/: 404.html  TEI_Schema.rng  index.html  sitemap.xml
1.3.0/elements/: index.html
1.3.0/search/: search_index.json
1.3.1/: 404.html  TEI_Schema.odd  TEI_Schema.rng  index.html  sitemap.xml
1.3.1/elements/: index.html
1.3.2/: 404.html  TEI_Schema.rng  index.html  sitemap.xml
1.3.2/elements/: index.html
1.3.2/search/: search_index.json
1.4.0/: 404.html  TEI_Schema.rng  index.html  sitemap.xml
1.4.0/elements/: index.html
1.4.0/search/: search_index.json
1.4.0/translations/: translations.json
1.4.1/: 404.html  TEI_Schema.odd  TEI_Schema.rng  index.html  sitemap.xml
1.4.1/elements/: index.html
1.4.1/fr/: index.html
1.4.2/: 404.html  TEI_Schema.odd  TEI_Schema.rng  index.html  sitemap.xml
1.4.2/elements/: index.html
1.4.2/fr/: index.html
1.4.2/search/: search_index.json
1.5.0/: 404.html  TEI_Schema.rng  index.html  sitemap.xml
1.5.0/elements/: index.html
1.5.0/fr/: index.html
1.6.0/: 404.html  TEI_Intro.rng  TEI_Lit.odd  TEI_Lit.rng  TEI_Schema.odd  TEI_Schema.rng  index.html  sitemap.xml
1.6.0/elements/: index.html
1.6.0/fr/: index.html
1.6.0/translations/: translations.json
dev/: 404.html  TEI_Intro.odd  TEI_Intro.rng  TEI_Lit.odd  TEI_Lit.rng  TEI_Schema.odd  TEI_Schema.rng  TEI_Schema_1.0.0-alpha.1.odd  TEI_Schema_1.0.0-alpha.1.rng  index.html  sitemap.xml
dev/base/: index.html
dev/elements/: index.html
dev/fr/: index.html
dev/search/: search_index.json
docs/: index.de.md  index.en.md
docs/base/: date.de.md  date.en.md  date.fr.md  transcription.de.md  transcription.en.md  transcription.fr.md
docs/translations/: translations.json
latest/: TEI_Intro.rng  TEI_Lit.rng  TEI_Schema.odd  index.html
latest/fr/: index.html
src/: main.odd.xml
src/common/: classes.odd.xml  constraints.odd.xml  content.odd.xml  datatypes.odd.xml  modules.odd.xml  patterns.odd.xml
src/docs/: index.de.md  index.fr.md
src/elements/: TEI.xml  ab.xml  abbr.xml  add.xml  addSpan.xml  additional.xml  altIdentifier.xml  anchor.xml  app.xml  author.xml  availability.xml  back.xml  bibl.xml  bindingDesc.xml  body.xml  cb.xml  cell.xml  choice.xml  condition.xml  corr.xml  damage.xml  damageSpan.xml  date.xml  del.xml  delSpan.xml  dimensions.xml  div.xml  docImprint.xml  editor.xml  editorialDecl.xml  encodingDesc.xml  expan.xml  extent.xml  figure.xml  fileDesc.xml  foliation.xml  foreign.xml  fw.xml  gap.xml  graphic.xml  (+76 more)
src/examples/: TEI.xml  ab.xml  addSpan.xml  app.xml  back.xml  choice-abbr.xml  choice-sic.xml  choice.xml  damageSpan.xml  delSpan.xml  ex-choice-1.xml  ex-choice-2.xml  examples.xml  figure.xml  listWit.xml  msDesc.xml  orgName.xml  persName.xml  precision.xml  seg.xml  sourceDesc-listWit.xml  sourceDesc-msDesc.xml  sourceDesc.xml  supplied.xml  table.xml  text.xml
src/schema/: intro.odd.xml  lit.odd.xml  main.odd.xml
src/templates/: meta.odd.xml
src/xsl/: change-rng-start.xsl  clean-compiled.xsl  fill-meta.xsl  odd-to-md.xsl  resolve-internal-references.xsl  resolve-path.xsl  resolve-sch-let.xsl  resolve-specs.xsl  resolve-xi.xsl
test/: conftest.py  test_constraints.py  test_schematron.py
test/elements/: conftest.py  tei_seriesStmt.py  test_TEI.py  test_ab.py  test_abbr.py  test_add.py  test_addSpan.py  test_additional.py  test_altIdentifier.py  test_app.py  test_author.py  test_availability.py  test_back.py  test_bibl.py  test_bindingDesc.py  test_body.py  test_cell.py  test_choice.py  test_condition.py  test_corr.py  test_damage.py  test_damageSpan.py  test_date.py  test_del.py  test_delSpan.py  test_dimensions.py  test_div.py  test_docImprint.py  test_editor.py  test_editorialDecl.py  test_encodingDesc.py  test_expan.py  test_extent.py  test_figure.py  test_fileDesc.py  test_foreign.py  test_fw.py  test_graphic.py  test_handDesc.py  test_handNote.py  (+69 more)
test/examples/: msDesc.xml  odd_example.xml
test/utils/: conftest.py  test_odd2md.py
utils/: ODDFactory.py  SSRQConfig.py  constants.py  doc_hooks.py  logger.py  main.py  odd2md.py  oddfactory.py  oddstats.py  ssrqconfig.py  ssrqschema.py  ssrqschematype.py  translater.py  validate.py  xslt.py
utils/commons/: config.py  filehandler.py  io.py  logger.py
utils/docs/: doc_hooks.py  odd2md.py  oddreader.py  translater.py  translator.py
utils/helpers/: reader.py
utils/odd_pipeline/: factory.py  step.py
utils/schema/: __init__.py  compile.py  validate.py
utils/specs/: attribute.py  base.py  dataspec.py  element.py  macrospec.py  odd_class.py  utils.py
(+3446 files in other folders)
